capzula-deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capzula-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capzula
  template:
    metadata:
      labels:
        app: capzula
    spec:
      containers:
      - name: capzula-container
        image: us-west2-docker.pkg.dev/capzula/capzula-repo/docker-php2
        ports:
        - containerPort: 9000
