service.yml
apiVersion: v1
kind: Service
metadata:
  name: capzula-service
  namespace: dev
spec:
  selector:
    app: capzula
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
