capzula-ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capzula-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: preview.capzula.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capzula-service
            port:
              number: 9000
